# Granite

./: .gitignore  Cargo.toml  README.md  rust-toolchain
doc/MasterThesis/: WissTemplate.cls  listings-rust.sty  literature.bib  main.tex
doc/MasterThesis/chapters/: abstract.tex  approach.tex  cites.md  conclusion.tex  futureWork.tex  introduction.tex  notes.md  relatedWork.tex  result.tex  titlepage.tex
doc/MasterThesis/presentation/: presentation.tex
doc/MasterThesis/presentation/unirostock/: UNI-Logo_Siegel_4c_115mm.ps  beamercolorthemeRostock.sty  beamerfontthemeRostock.sty  beamerinnerthemeRostock.sty  beamerouterthemeRostock.sty  beamerthemeRostock.sty  title-auf.eps  title-ief.eps  (+9 more)
doc/diagrams/: BasicBlock.graphml  BasickBlock.asciio  BasickBlock.txt  Function.graphml  FunctionCallNet.graphml  FunctionCallNetPruned.graphml  StatementsNet.graphml  SwitchInt.graphml  TerminatorsNet.graphml  basic_blocks.graphml  basic_program.graphml  basic_program_new.graphml  function_and_empty_program.graphml  local.graphml  memoryAccess.graphml  mutexNet.graphml  netExamples.graphml
pnml/: deadlock.lola  deadlock.pnml  minimal.lola  minimal.pnml
scripts/: analyze.py  check_deadlock.py  lola.py  run.py  visualize.py
src/: init.rs  intrinsics.rs  main.rs  translator.rs
src/petri_net/: basic_block.rs  function.rs  intrinsics.rs  mod.rs  petri_net.rs  tests.rs  trait_impls.rs  unique_functions.rs
tests/: minimal_deadlock.rs  test_programs.rs
tests/sample_programs/: dining_philosophers.rs  function_call.rs  match.rs  minimal_deadlock.rs  promoted.rs  switch_int.rs
