[package]
name = "granite"
version = "0.1.0"
authors = ["\"tom\" <\"tom.meyer89@gmail.com\">"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6.1"
log = "0.4"
xml-rs = "0.8"
indexed_vec = "1.1.2"
petri_to_star = { git = "https://github.com/Skasselbard/PetriToStar"}
# petri_to_star = { path = "../PetriToStar"}
clap = "2.33.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"